--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "date-fns": "^4.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^6.20.0",
     "react-toastify": "^9.1.3"
   },
