--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,7 +16,9 @@
     "react-dom": "^18.2.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^6.20.0",
-    "react-toastify": "^9.1.3"
+    "react-slick": "^0.30.3",
+    "react-toastify": "^9.1.3",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.37",
